--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <section class="layout-other">
     <div class="layout-other-wrapper">
-      <img src="assets/images/html/imagen_boda.JPG" alt="">
+      <img src="./assets/images/html/imagen_boda.JPG" alt="">
       <h1 class="petit">Boda Ana y Fran</h1>
       <div>
         
