--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Demo SCSS + JS</title>
+    <title>Boda Ana Sara Y Fran</title>
 
     <!-- CSS compilado desde SCSS -->
     <link rel="stylesheet" href="./dist/css/main.css" />
@@ -11,7 +11,7 @@
   <body>
     <main class="app">
       <header class="app__header">
-        <h1>Proyecto básico: HTML + SCSS + JS</h1>
+        <h1>Boda Ana Sara Y Fran</h1>
         <p class="muted">
           Si ves estilos (tarjeta, colores, botón bonito) => SCSS OK.
           Si el botón cambia el estado y contador => JS OK.
