--- a/index.html
+++ b/index.html
@@ -5,39 +5,87 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Boda Ana Sara Y Fran</title>
 
+    <!-- ===================== -->
+    <!-- Google Font -->
+    <!-- ===================== -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Montserrat:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- ===================== -->
+    <!-- Bootstrap CSS -->
+    <!-- ===================== -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- ===================== -->
+    <!-- AOS CSS -->
+    <!-- ===================== -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"
+      rel="stylesheet"
+    />
+
+    <!-- ===================== -->
     <!-- CSS compilado desde SCSS -->
+    <!-- ===================== -->
     <link rel="stylesheet" href="./dist/css/main.css" />
   </head>
+
   <body>
-    <main class="app">
-      <header class="app__header">
-        <h1>Boda Ana Sara Y Fran</h1>
-        <p class="muted">
-          Si ves estilos (tarjeta, colores, botón bonito) => SCSS OK.
-          Si el botón cambia el estado y contador => JS OK.
-        </p>
-      </header>
+    <main class="app container py-5">
 
-      <section class="card">
-        <h2>Prueba rápida</h2>
+      <section class="image text-center mx-auto" data-aos="fade-up">
+      </section>
 
-        <div class="row">
-          <button id="btn" class="btn" type="button">Haz click</button>
-          <span id="status" class="badge">JS: pendiente</span>
-        </div>
-
-        <p class="counter">
-          Clicks: <strong id="count">0</strong>
-        </p>
-
-        <div class="note">
-          <strong>Tip:</strong> si cambias <code>main.scss</code> y tienes el watch activo,
-          deberías ver cambios al recargar.
+      <section class="text-center mx-auto" data-aos="fade-up">
+        <h1 class="display-5 my-5 text-uppercase">Boda <br>Ana Sara y Fran</h1>
+        <div id="countdown">
+          <span id="days">00</span>D -
+          <span id="hours">00</span>H-
+          <span id="minutes">00</span>M-
+          <span id="seconds">00</span>S
         </div>
       </section>
+
     </main>
 
-    <!-- JS -->
+    <!-- ===================== -->
+    <!-- Bootstrap JS (bundle con Popper) -->
+    <!-- ===================== -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      defer
+    ></script>
+
+    <!-- ===================== -->
+    <!-- AOS JS -->
+    <!-- ===================== -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"
+      defer
+    ></script>
+
+    <!-- ===================== -->
+    <!-- Tu JS -->
+    <!-- ===================== -->
     <script src="./src/js/main.js" defer></script>
+
+    <!-- ===================== -->
+    <!-- Inicialización AOS -->
+    <!-- ===================== -->
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        AOS.init({
+          duration: 800,
+          once: true
+        });
+      });
+    </script>
   </body>
 </html>
