--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
   </head>
 
   <body>
-    <main class="app container py-5">
+    <main class="app container p-0 m-0">
 
-      <section class="image text-center mx-auto" data-aos="fade-up">
+      <section class="image text-center p-0 m-0 mx-auto" data-aos="fade-up">
       </section>
 
       <section class="text-center mx-auto" data-aos="fade-up">
