--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </head>
 
   <body>
-    <main class="app container-fluid p-0 m-0 pb-5">
+    <main class="app container-fluid pt-0 m-0 pb-8">
 
       <section class="image text-center">
         <img
@@ -63,8 +63,8 @@
         </div>
       </section>
 
-      <section class="list text-center mx-auto" data-aos="fade-up">
-        <div class="my-card">
+      <section class="list text-center mx-auto">
+        <div class="my-card" data-aos="fade-up">
           <img
             src="./src/images/bus.png"
             alt="Boda Ana Sara y Fran"
@@ -73,7 +73,7 @@
           <h2>BUS</h2>
           <!-- <p>18:00 h. Parroquia <br>San Martin de Tours <br>San Martín de Valdeiglesias <br>(Madrid)</p> -->
         </div>
-        <div class="my-card">
+        <div class="my-card" data-aos="fade-up">
           <img
             src="./src/images/iglesia.png"
             alt="Boda Ana Sara y Fran"
@@ -85,7 +85,7 @@
             Cómo llegar
           </a>
         </div>
-        <div class="my-card">
+        <div class="my-card" data-aos="fade-up">
           <img
             src="./src/images/coctel.png"
             alt="Boda Ana Sara y Fran"
@@ -97,7 +97,7 @@
             Cómo llegar
           </a>
         </div>
-        <div class="my-card">
+        <div class="my-card" data-aos="fade-up">
           <img
             src="./src/images/fiesta.png"
             alt="Boda Ana Sara y Fran"
