Quitado padding main

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </head>
 
   <body>
-    <main class="app container-fluid pt-0 m-0 pb-8">
+    <main class="app container-fluid m-0 px-0 pt-0 pb-9">
 
       <section class="image text-center">
         <img
