--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
           <span id="minutes">00</span>m -
           <span id="seconds">00</span>s
         </div>
+        <!-- <div id="countdown d-flex flex-row">
+          <div class="d-flex flex-column">
+            <span id="days">00</span>
+            <p>dias</p>
+          </div>
+          <div class="d-flex flex-column">
+            <span id="hours">00</span>
+            <p>hor</p>
+          </div>
+          <div class="d-flex flex-column">
+            <span id="minutes">00</span>
+            <p>min</p>
+          </div>
+          <div class="d-flex flex-column">
+            <span id="seconds">00</span>s
+            <p>seg</p>
+          </div>
+        </div> -->
       </section>
 
       <section class="list text-center mx-auto">
@@ -84,6 +102,47 @@
           <a href="https://maps.app.goo.gl/qVatEH4owxSj4yDD9" target="_blank" rel="noopener" class="btn-maps">
             Cómo llegar
           </a>
+          <a class="btn-flw pt-5 mx-auto" href="https://maps.app.goo.gl/qVatEH4owxSj4yDD9" target="_blank" rel="noopener">
+            <div class="wrapper">
+              <p class="text mb-0">Cómo llegar</p>
+              <div class="flower flower1">
+                  <div class="petal one"></div>
+                  <div class="petal two"></div>
+                  <div class="petal three"></div>
+                  <div class="petal four"></div>
+              </div>
+              <div class="flower flower2">
+                  <div class="petal one"></div>
+                  <div class="petal two"></div>
+                  <div class="petal three"></div>
+                  <div class="petal four"></div>
+              </div>
+              <div class="flower flower3">
+                  <div class="petal one"></div>
+                  <div class="petal two"></div>
+                  <div class="petal three"></div>
+                  <div class="petal four"></div>
+              </div>
+              <div class="flower flower4">
+                  <div class="petal one"></div>
+                  <div class="petal two"></div>
+                  <div class="petal three"></div>
+                  <div class="petal four"></div>
+              </div>
+              <div class="flower flower5">
+                  <div class="petal one"></div>
+                  <div class="petal two"></div>
+                  <div class="petal three"></div>
+                  <div class="petal four"></div>
+              </div>
+              <div class="flower flower6">
+                  <div class="petal one"></div>
+                  <div class="petal two"></div>
+                  <div class="petal three"></div>
+                  <div class="petal four"></div>
+              </div>
+            </div>
+          </a>
         </div>
         <div class="my-card" data-aos="fade-up">
           <img
@@ -104,7 +163,21 @@
             class="icon-image"
           />
           <h2>FIESTA</h2>
-          <!-- <p>18:00 h. Parroquia <br>San Martin de Tours <br>San Martín de Valdeiglesias <br>(Madrid)</p> -->
+          <p>Despues del convite <br>El Tiemblo (Ávila)</p>
+        </div>
+      </section>
+
+      <section class="text-center mx-auto" data-aos="fade-up">
+        <h4 class="mb-3">Confirmar asistencia + alérgenos/intolerancias</h4>
+        <div class="d-flex justify-content-between mx-5">
+          <div class="d-block">
+            <h6>Fran</h6>
+            <p>605 925 116</p>
+          </div>
+          <div class="d-block">
+            <h6>Ana Sara</h6>
+            <p>603 705 367</p>
+          </div>
         </div>
       </section>
 
@@ -135,6 +208,50 @@
           </div>
         </div>
       </section>
+
+      <!-- <section class="text-center mx-auto" data-aos="fade-up">
+        <a class="btn-flw mx-auto" href="https://maps.app.goo.gl/qVatEH4owxSj4yDD9" target="_blank" rel="noopener">
+          <div class="wrapper">
+            <p class="text mb-0">Cómo llegar</p>
+            <div class="flower flower1">
+                <div class="petal one"></div>
+                <div class="petal two"></div>
+                <div class="petal three"></div>
+                <div class="petal four"></div>
+            </div>
+            <div class="flower flower2">
+                <div class="petal one"></div>
+                <div class="petal two"></div>
+                <div class="petal three"></div>
+                <div class="petal four"></div>
+            </div>
+            <div class="flower flower3">
+                <div class="petal one"></div>
+                <div class="petal two"></div>
+                <div class="petal three"></div>
+                <div class="petal four"></div>
+            </div>
+            <div class="flower flower4">
+                <div class="petal one"></div>
+                <div class="petal two"></div>
+                <div class="petal three"></div>
+                <div class="petal four"></div>
+            </div>
+            <div class="flower flower5">
+                <div class="petal one"></div>
+                <div class="petal two"></div>
+                <div class="petal three"></div>
+                <div class="petal four"></div>
+            </div>
+            <div class="flower flower6">
+                <div class="petal one"></div>
+                <div class="petal two"></div>
+                <div class="petal three"></div>
+                <div class="petal four"></div>
+            </div>
+          </div>
+        </a>
+      </section> -->
 
     </main>
 
