--- a/index.html
+++ b/index.html
@@ -102,47 +102,6 @@
           <a href="https://maps.app.goo.gl/qVatEH4owxSj4yDD9" target="_blank" rel="noopener" class="btn-maps">
             Cómo llegar
           </a>
-          <a class="btn-flw pt-5 mx-auto" href="https://maps.app.goo.gl/qVatEH4owxSj4yDD9" target="_blank" rel="noopener">
-            <div class="wrapper">
-              <p class="text mb-0">Cómo llegar</p>
-              <div class="flower flower1">
-                  <div class="petal one"></div>
-                  <div class="petal two"></div>
-                  <div class="petal three"></div>
-                  <div class="petal four"></div>
-              </div>
-              <div class="flower flower2">
-                  <div class="petal one"></div>
-                  <div class="petal two"></div>
-                  <div class="petal three"></div>
-                  <div class="petal four"></div>
-              </div>
-              <div class="flower flower3">
-                  <div class="petal one"></div>
-                  <div class="petal two"></div>
-                  <div class="petal three"></div>
-                  <div class="petal four"></div>
-              </div>
-              <div class="flower flower4">
-                  <div class="petal one"></div>
-                  <div class="petal two"></div>
-                  <div class="petal three"></div>
-                  <div class="petal four"></div>
-              </div>
-              <div class="flower flower5">
-                  <div class="petal one"></div>
-                  <div class="petal two"></div>
-                  <div class="petal three"></div>
-                  <div class="petal four"></div>
-              </div>
-              <div class="flower flower6">
-                  <div class="petal one"></div>
-                  <div class="petal two"></div>
-                  <div class="petal three"></div>
-                  <div class="petal four"></div>
-              </div>
-            </div>
-          </a>
         </div>
         <div class="my-card" data-aos="fade-up">
           <img
@@ -168,8 +127,8 @@
       </section>
 
       <section class="text-center mx-auto" data-aos="fade-up">
-        <h4 class="mb-3">Confirmar asistencia + alérgenos/intolerancias</h4>
-        <div class="d-flex justify-content-between mx-5">
+        <h4 class="asist mb-3">Confirmar asistencia + alérgenos/intolerancias</h4>
+        <div class="d-flex justify-content-between mx-4">
           <div class="d-block">
             <h6>Fran</h6>
             <p>605 925 116</p>
