--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </section>
 
       <section class="text-center mx-auto" data-aos="fade-up">
-        <h4 class="asist mb-3">Confirmar asistencia + alérgenos/intolerancias</h4>
+        <h4 class="asist mx-1 mb-3">Confirmar asistencia + alérgenos/intolerancias</h4>
         <div class="d-flex justify-content-between mx-4">
           <div class="d-block">
             <h6>Fran</h6>
